# generic_steering_controller_demo

./: .gitmodules  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: carlikebot_controllers.yaml
include/carlikebot_bringup/: car_like_kinematics.hpp
launch/: carlikebot.launch.py  carlikebot_control.launch.py
ros2_control/: generic_control.ros2_control.xacro
rviz/: carlikebot.rviz
src/: car_like_kinematics.cpp
urdf/: carlikebot.urdf.xacro
